# sat_solver

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.txt  Sanitizers.cmake  TODO.md  demo  presentation.url
app/: sat_solve.cpp  sat_verify.cpp  test_cnf_input.cpp  test_sol_io.cpp
examples/: 0.sol  cnf_0  cnf_sol_0  example_sol_0.sol  sat_0  sat_0.cnf  sat_2  sat_3  sat_4  unsat_cnf_0
examples/demo/: cnf_1  sat_1
include/: cnf.hpp  err.hpp  io.hpp  message.hpp  orchestrator.hpp  sol.hpp  solve.hpp  solver.hpp  solvers.hpp  verify.hpp
lib/: cnf.cpp  io.cpp  orchestrator.cpp  sol.cpp  solve.cpp  verify.cpp
lib/io/: cnf.cpp  prob.cpp  sol.cpp
lib/solver/: basic_solver.cpp  brute_force.cpp  cdcl.cpp  dpll.cpp  local_search.cpp
lib/solvers/: brute_force.cpp
